fixed toolbar z-index issue

--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -47,6 +47,7 @@ html { overflow-y: scroll; }
     position: absolute;
     top: 61px;
     left: 0;
+    z-index: 1;
     width: 100%;
     padding: 15px 0;
     border-bottom: 1px solid #e5e5e5;
